test/classes/delete-free/lifetimes/lifetime-checking-on-by-default.good
lifetime-checking-on-by-default.chpl:6: In function 'bad':
lifetime-checking-on-by-default.chpl:8: error: Reference to scoped variable cannot be returned
lifetime-checking-on-by-default.chpl:7: note: consider scope of locl
